name:           budget
version:        1.0
synopsis:       Budget management program
description:    A program used to compile monthly budget information based on
                CSV files exported from various banking institutions.
category:       utils
author:         Philippe Milot
maintainer:     Philippe Milot
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.6

source-repository head
  type:         git
  location:     https://github.com/pmlt/budget.git

executable budget
  build-depends:    base >= 4.6 && < 5,
                    old-locale >= 1.0.0.5,
                    time >= 1.4.0.1,
                    split >= 0.2.2,
                    csv >= 0.1.2
  main-is:          Main.hs
  hs-source-dirs:   src